Fix violations